<resources>
    <string name="app_name">kaloripaivakirja</string>
    <string name="otsikko">Lisää omat tiedot</string>
    <string name="lisaa_button">Lisää tiedot</string>
    <string name="paino">Paino kiloina</string>
    <string name="pituus">Pituus sentteinä</string>
    <string name="ika">Ikä vuosina</string>
    <string name="sukupuoli">Sukupuoli</string>
    <string name="sukupuoli_mies">Mies</string>
    <string name="sukupuoli_nainen">Nainen</string>
    <string name="aamiainen">Aamiainen</string>
    <string name="lounas">Lounas</string>
    <string name="paivallinen">Päivällinen</string>
    <string name="iltapala">Iltapala</string>
    <string name="ruoka">Anna syödyn ruuan tiedot</string>
    <string name="kalorit">Anna kalorimäärä (kcal)</string>
    <string name="tiedot_otsikko">Omat tiedot</string>
    <string name="muokkaa_button">Muokkaa omia tietoja</string>
    <string name="nolla">0</string>
    <string name="testi">1900</string>
</resources>